Add `SingleSlotMap` to parameterised tests cases in `SlotMapTest`.